--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="refresh" content="30">
     <meta charset="UTF-8">
     <title>RFID Inventory Dashboard</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
