--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="30">
     <meta charset="UTF-8">
     <title>RFID Inventory Dashboard</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -66,6 +65,11 @@
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    setInterval(function() {
+      location.reload();
+    }, 30000); // Refreshes every 30 seconds
+  </script>
 </body>
 </html>
 
