--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -66,10 +66,17 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-    setInterval(function() {
-      location.reload();
-    }, 30000); // Refreshes every 30 seconds
-  </script>
+(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'92489b8c3becadd1',t:'MTc0MjY3NzExMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();
+
+// Auto-refresh every 30 seconds
+document.addEventListener("DOMContentLoaded", () => {
+    console.log("Base DOM Content Loaded");
+    setInterval(() => {
+        console.log("Auto-refreshing page...");
+        window.location.reload();
+    }, 30000); // 30,000 ms = 30 seconds
+});
+</script>
 </body>
 </html>
 
